--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,7 @@
 
   "ConnectionStrings" : {
     "DefaultConnection" : "Data source=dating.db"
-  }
+  },
+
+  "TokenKey": " super secret key super secret key super secret key super secret key"
 }
