--- a/API/API.csproj
+++ b/API/API.csproj
@@ -10,8 +10,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.0-rc.1.25451.107" />
+    <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="10.0.0-rc.1.25451.107" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="8.13.1" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.13.1" />
-  </ItemGroup>
+</ItemGroup>
 
 </Project>
